--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "movement",
+	"name": "movement",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "Demonstrates some of the capabilities of the Obsidian API.",
@@ -9,3 +9,4 @@
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
+
